# Animat

./: .gitignore  .qmlls.ini  CMakeLists.txt  Constants.h  Main.qml  README.md  Resources.qrc  Singleton.h  flowchart.drawio  flowchart.tldr  main.cpp  test_regex.cpp
Components/: ControlPanel.qml  Menubar.qml  SceneManager.qml  Taskbar.qml  TitleBar.qml
Math/: Scene.cpp  Scene.h  trackermanager.cpp  trackermanager.h
Math/Animations/: AllAnimations.h  animation.cpp  animation.h  animation.sh  animationmanager.cpp  animationmanager.h  animpacket.cpp  animpacket.h
Math/Animations/animTypes/: CreateAnimation.cpp  CreateAnimation.h  CustomPointAnimation.cpp  CustomPointAnimation.h  CustomScalarAnimation.cpp  CustomScalarAnimation.h  DestroyAnimation.cpp  DestroyAnimation.h  MoveAnimation.cpp  MoveAnimation.h  ValueAnimation.cpp  ValueAnimation.h  WaitAnimation.cpp  WaitAnimation.h
Math/Helper/: ClickableMobject.cpp  ClickableMobject.h  Text.cpp  Text.h  funcs.cpp  funcs.h  mproperties.cpp  mproperties.h
Math/Helper/Properties/: baseproperties.cpp  baseproperties.h  circleproperties.cpp  circleproperties.h  curveproperties.cpp  curveproperties.h  geometricproperties.cpp  geometricproperties.h  lineproperties.cpp  lineproperties.h  planeproperties.cpp  planeproperties.h  polygonproperties.cpp  polygonproperties.h  textproperties.cpp  textproperties.h
Math/Helper/Properties/Geometric/: angleproperties.cpp  angleproperties.h  planeproperties.cpp
Math/Managers/: funcmap.cpp  funcmap.h  trackermanager.cpp  trackermanager.h
Math/Mobjects/: Circle.cpp  Circle.h  Curve.cpp  Curve.h  Dot.h  Group.cpp  Group.h  LaTeXText.cpp  LaTeXText.h  MRectangle.cpp  MRectangle.h  Mobject.cpp  Mobject.h  Polygon.cpp  Polygon.h  Rectangle.cpp  Rectangle.h  SimpleLine.cpp  SimpleLine.h  Text.cpp  Text.h  line.cpp  line.h
Math/Mobjects/Base/: ClickableMobject.cpp  ClickableMobject.h  Mobject.h
Math/Mobjects/Basic/: Circle.cpp  Dot.cpp  Dot.h  MRectangle.cpp  Polygon.cpp  Polygon.h  Vector.cpp  Vector.h  line.cpp  line.h
Math/Mobjects/Complex/: Curve.cpp  Curve.h  MPolygon.cpp  MPolygon.h  plane.cpp  plane.h
Math/Mobjects/Geometric/: Angle.cpp  Angle.h
Math/Mobjects/Groups/: Group.cpp  VGroup.cpp  VGroup.h  group.h
Math/Mobjects/MText/: MText.cpp  MText.h
Math/Mobjects/Simple/: SimpleDot.cpp  SimpleDot.h  SimpleLine.cpp  SimpleLine.h  SimpleText.cpp  SimpleText.h  SimpleText_Usage.md  SimpleVector.cpp  SimpleVector.h
Math/Mobjects/Text/: MText.h  Text.cpp  Text.h
Math/Parser/: CommandFactory.h  CommandFactoryExample.cpp  EnhancedParserExample.cpp  README.md  animationscriptparser.cpp  animationscriptparser.h  command.cpp  command.h  commandmap.cpp  commandmap.h  dependencygraph.cpp  dependencygraph.h  parser.cpp  parser.h  trackercommand.cpp  trackercommand.h  trackermanager.cpp  trackermanager.h
Math/Parser/Commands/: connectcommand.cpp  connectcommand.h  dpvalcommand.cpp  dpvalcommand.h  dvalcommand.cpp  dvalcommand.h  makeptvalcommand.cpp  makeptvalcommand.h  makevalcommand.cpp  makevalcommand.h
Math/ValueTracker/: animationtimer.cpp  animationtimer.h  playbackslider.cpp  playbackslider.h  pttrackerdata.cpp  pttrackerdata.h  ptvaluetracker.cpp  ptvaluetracker.h  trackerdata.cpp  trackerdata.h  trackermanager.cpp  trackermanager.h  valuetacker.cpp  valuetacker.h  valuetracker.cpp  valuetracker.h
QML/: Main.qml
QML/Components/: ControlPanel.qml  Menubar.qml  PropertiesToolbar.qml  SceneManager.qml  Sidebar.qml  Taskbar.qml  TimeTriggeredSlidersDemo.js  TitleBar.qml
QML/Components/Elements/: ActiveAnimationsList.qml  MButton.qml  MpropertiesEditor.qml  TextButton.qml  ToolbarButton.qml  ToolbarSection.qml  TrackerDataDisplay.qml  ValueManagement.qml  ValueManagement_original.qml
QML/Components/Elements/Input/: AnimInput.qml  AnimationFieldsPanel.qml  AnimationTypeSelector.qml  ColorPicker.qml  DarkCheckBox.qml  MSlider.qml  NumberInput.qml  PlaybackInput.qml  PointInput.qml  StyledButton.qml  StyledTextArea.qml  StyledTextField.qml
QML/Components/Elements/Input/AnimInputComponents/: AnimationFieldsPanel.qml
QML/Components/Elements/Input/AnimInputComponents/Controls/: AnimationButtons.qml  AnimationNavigationControls.qml
QML/Components/Elements/Input/AnimInputComponents/Display/: AnimationListView.qml  AnimationLog.qml
QML/Components/Elements/Input/AnimInputComponents/Fields/: MobjectSelector.qml  PropertyField.qml  TimingFields.qml  ValueFields.qml
QML/Components/Elements/PropertyPanels/: AppearancePanel.qml  CurvePanel.qml  LinePanel.qml  MobjectIdPanel.qml  MobjectNamePanel.qml  NumericPanel.qml  PlanePanel.qml  PolygonPanel.qml  TextPanel.qml  TransformPanel.qml
QML/Components/Elements/TrackerComponents/: ActiveSlidersPanel.qml  PointTrackersList.qml  SliderConfigPopup.qml  SliderOverlay.qml  SlidersPanel.qml  TimeTriggeredSlider.qml  TimeTriggeredSlidersManager.qml  TrackerDataHeader.qml  TrackerTabsPanel.qml  ValSlider.qml  ValueTrackersList.qml
QML/Components/ToolbarSections/: AppearanceToolbarSection.qml  GeometricToolbarSection.qml  PolygonToolBar.qml  SpecialSection.qml  TextToolbarSection.qml
Utils/: Constants.h  filehandler.cpp  filehandler.h  mobjectmap.cpp  mobjectmap.h  mobjectregistry.cpp  mobjectregistry.h  scenevalinterface.cpp  scenevalinterface.h
lib/: CMakeLists.txt  cmake_install.cmake
lib/muparser_autogen/: deps  moc_predefs.h
